--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -139,7 +139,7 @@
         </a>
     </div>
 
-    <div class="full-height grid add-location" id="map-drawer">
+    <div class="full-height grid" id="map-drawer">
         <div id="map-drawer-content">
             <div id="map-drawer-search-pane">
                 <h2 class="map-drawer-title">Grow Where You Are</h2>
