--- a/growing_cities/templates/growing_places/growingplace_form.html
+++ b/growing_cities/templates/growing_places/growingplace_form.html
@@ -42,5 +42,7 @@
         {{ form.url }}
     </div>
 
+    <a class="add-place-cancel-button">cancel</a>
+
     <input class="add-place-save-button" type="submit" value="Add My Location" />
 </form>
