new social media links

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -76,7 +76,7 @@
     <div id="social-buttons">
         <ul>
             <li>
-                <a class="social-button facebook" href="http://facebook.com/" target="_blank"></a>
+                <a class="social-button facebook" href="http://facebook.com/growingcities" target="_blank"></a>
             </li>
         </ul>
         <ul>
@@ -91,7 +91,7 @@
         </ul>
         <ul>
             <li>
-                <a class="social-button rss" href="http://www.growingcitiesmovie.com/blog/?feed=rss2" target="_blank"></a>
+                <a class="social-button rss" href="http://growingcitiesmovie.tumblr.com/" target="_blank"></a>
             </li>
         </ul>
     </div>
