--- a/growing_cities/templates/stories/story_detail.html
+++ b/growing_cities/templates/stories/story_detail.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="article-wrapper">
+<div class="article-wrapper story-detail">
     <a href="{% url "pages_learn" %}">back</a>
     <h2>{{ story.title }}</h2>
-    <img src="{{ story.image.url }}" />
+    <img class="story-detail-image" src="{{ story.image.url }}" />
     {{ story.text|striptags|linebreaks }}
 </div>
 {% endblock %}
