--- a/growing_cities/templates/stories/_story_detail.html
+++ b/growing_cities/templates/stories/_story_detail.html
@@ -1,11 +1,8 @@
 {% if story.image %}
-<a href="{{ story.get_absolute_url }}">
-    {% comment %}
-    TODO easy_thumbnails?
-    {% endcomment %}
-    <img src="{{ story.image.url }}" />
-</a>
+    <a href="{{ story.get_absolute_url }}">
+        <img src="{{ story.thumbnail.url }}" />
+    </a>
 {% else %}
-<p>{{ story.title }}</p>
-<a href="{{ story.get_absolute_url }}">read more</a>
+    <p>{{ story.title }}</p>
+    <a href="{{ story.get_absolute_url }}">read more</a>
 {% endif %}
