--- a/growing_cities/videos/templates/videos/embed_vimeo.html
+++ b/growing_cities/videos/templates/videos/embed_vimeo.html
@@ -1,3 +1,3 @@
-<iframe src="http://player.vimeo.com/video/{{ video.external_id }}" 
+<iframe src="http://player.vimeo.com/video/{{ external_id }}" 
     width="{{ width }}" height="{{ height }}" frameborder="0" 
     webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
