--- a/growing_cities/videos/templates/videos/embed_youtube.html
+++ b/growing_cities/videos/templates/videos/embed_youtube.html
@@ -1,3 +1,3 @@
 <iframe id="player" type="text/html" width="{{ width }}" height="{{ height }}" 
-    src="http://www.youtube.com/embed/{{ video.external_id }}"
+    src="http://www.youtube.com/embed/{{ external_id }}"
     frameborder="0"></iframe>
