make story videos take up full width/height

--- a/growing_cities/templates/stories/_story_detail.html
+++ b/growing_cities/templates/stories/_story_detail.html
@@ -1,7 +1,7 @@
 {% load videos_tags %}
 
 {% if story.video_url %}
-    {{ story.video_url|embed_by_url:"300,175" }}
+    {{ story.video_url|embed_by_url:"100%,100%" }}
 {% elif story.image %}
     <a href="{{ story.get_absolute_url }}">
         <img src="{{ story.thumbnail.url }}" />
