--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -624,6 +624,7 @@ ul.story-list li {
     height: 175px;
     overflow-x: auto;
     overflow-y: auto;
+    padding: 15px;
 }
 
 .story-detail-image {
