--- a/growing_cities/templates/pages/film.html
+++ b/growing_cities/templates/pages/film.html
@@ -60,5 +60,9 @@
         {% show_page_content "press" %}
     </div>
 
+    <div class="content-section partners">
+        {% show_page_content "partners" %}
+    </div>
+
 </div>
 {% endblock %}
