one global variable

--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -3,7 +3,7 @@
 
 {% block scripts %}
     <script type="text/javascript">
-        user_ip = '{{ ip }}';
+        GROWING_CITIES.user_ip = '{{ ip }}';
     </script>
 {% endblock %}
 
