attempt to play using the API

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -20,6 +20,8 @@
     <![endif]-->
     <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
 
+    <script src="{{ STATIC_URL }}js/lib/froogaloop.min.js"></script>
+
     {% compress js %}
     <script type="text/javascript">
     WebFontConfig = { fontdeck: { id: '30649' } };
