--- a/growing_cities/templates/pages/film.html
+++ b/growing_cities/templates/pages/film.html
@@ -20,7 +20,7 @@
         TODO don't hardcode video ID
         {% endcomment %}
         <iframe id="trailer-player" class="full-height"
-            src="//vimeo.com/42288661?api=1&player_id=trailer-player&title=0&byline=0&portrait=0"
+            src="//player.vimeo.com/video/42288661?api=1&player_id=trailer-player&title=0&byline=0&portrait=0"
             width="100%" frameborder="0" webkitAllowFullScreen
             mozallowfullscreen allowFullScreen></iframe>
 
