--- a/growing_cities/templates/contact_form/form.html
+++ b/growing_cities/templates/contact_form/form.html
@@ -16,4 +16,5 @@
         {{ form.body.label_tag }} {{ form.body }}
     </div>
     <input type="submit" value="Send" />
+    <div class="loading"></div>
 </form>
