--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -571,10 +571,9 @@ header {
 }
 
 .story-form input[type="file"] {
+    font-size: 38px;
     margin-top: 5px;
-    margin-bottom: 15px;
-    padding: 15px;
-    width: 120px;
+    width: 100%;
 
     /* for file input overlay */
     filter: alpha(opacity=0);
