--- a/growing_cities/templates/contact_form/form.html
+++ b/growing_cities/templates/contact_form/form.html
@@ -1,4 +1,4 @@
-<form action="{% url "contact_form:form" %}" class="contact-form" method="post">
+<form action="{% url "contact_form:form" %}" class="contact-form ajax-form content-page-form" method="post">
     {% csrf_token %}
 
     <div class="from-row">
