--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -12,6 +12,7 @@
                 $(this).addClass('submitting');
             });
 
+            // TODO theme this
             $('#id_date').datepicker({
                 minDate: 0,   
             });
