--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -181,7 +181,7 @@
                     <ul id="map-results"></ul>           
                 </div>
 
-                <div class="add-place-button">
+                <div class="add-place-button action-button action-button-a">
                     Add Your Location
                 </div>
 
