--- a/growing_cities/templates/growing_places/growingplace_form.html
+++ b/growing_cities/templates/growing_places/growingplace_form.html
@@ -44,5 +44,5 @@
 
     <a class="add-place-cancel-button">cancel</a>
 
-    <input class="add-place-save-button" type="submit" value="Add My Location" />
+    <input class="add-place-save-button action-button" type="submit" value="Add My Location" />
 </form>
