--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -49,7 +49,7 @@
 
 <div class="host-screening lead-in">
     {% show_page_content "host-screening-lead-in" %}
-    <a class="host-screening-form-show">Host a screening</a>
+    <a class="host-screening-form-show action-button action-button-a">Host a screening</a>
 </div>
 <div class="host-screening-instructions">
     {% show_page_content "host-screening-instructions" %}
